--- a/www/css/dragon-desing.css
+++ b/www/css/dragon-desing.css
@@ -9,9 +9,14 @@
     --gray-color: #6b6b6b;
     --width-sidebar: 200px;
 }
+*{
+    padding: 0;
+    margin: 0;
+}
 
 *{
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Rubik', sans-serif; */
     /* font-family: 'Montserrat', sans-serif; */
     font-weight: 500;
     font-size: 14px;
@@ -148,6 +153,8 @@ img{
     text-transform: uppercase;
     font-size: 12px;
     padding: 10px 30px;
+    min-width: 120px;
+    border-radius: 60px;
 }
 .btn-sm{
     padding: .25rem .5rem !important;
@@ -378,9 +385,24 @@ body >div{
     background-color: #fff;
     height: 100%;
 }
-.login{
-    padding-top: 10%;
+.bg-login img{
+    width: 150px;
 }
+.bg-login{
+    width: 100%;
+    height: 220px;
+    z-index: 0;
+    padding-top: 100px;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: bottom;
+    background-image: url('../img/bg-login.png');
+    text-align: center;
+}
+.card-login{
+    background-color: transparent;
+}
+
 .v-select-options img{
     width: 20px;
 }
