--- a/platforms/android/app/src/main/assets/www/css/dragon-desing.css
+++ b/platforms/android/app/src/main/assets/www/css/dragon-desing.css
@@ -7,7 +7,7 @@
     --blue-color: #0e52b0;
     --info-color: #09AEE3;
     --gray-color: #6b6b6b;
-    --width-sidebar: 200px;
+    --width-sidebar: 250px;
 }
 *{
     padding: 0;
@@ -20,6 +20,9 @@
     /* font-family: 'Montserrat', sans-serif; */
     font-weight: 500;
     font-size: 14px;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    width: 100%;
 }
 img{
     width: 100%;
@@ -333,7 +336,13 @@ img{
 .sidebar .sidebar-content{
     padding: 15px;
 }
-.navbar{margin-left: 100px; background-color: #fff;padding: 15px 20px;}
+.navbar{
+    position: relative;
+}
+.navbar-button{
+    position: absolute;
+}
+.navbar{margin-left: 100px; background-color: #fff;padding: 15px 20px;background-color: var(--success-color);color: #fff;}
 
 @media (max-width: 992px){ 
     .navbar{margin-left: 0}
@@ -362,7 +371,8 @@ a:hover{
     text-decoration: none;
 }
 body{
-    background-color: #e2e2e2;
+    /* background-color: #e2e2e2; */
+    background-color: #fff;
 }
 
 /* .navbar{margin-bottom:15px;box-shadow:0 2px rgba(0,0,0,.2)}.navbar-brand{margin-left:auto;margin-right:auto} */
