--- a/platforms/browser/www/css/dragon-desing.css
+++ b/platforms/browser/www/css/dragon-desing.css
@@ -7,14 +7,22 @@
     --blue-color: #0e52b0;
     --info-color: #09AEE3;
     --gray-color: #6b6b6b;
-    --width-sidebar: 200px;
+    --width-sidebar: 250px;
+}
+*{
+    padding: 0;
+    margin: 0;
 }
 
 *{
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Rubik', sans-serif; */
     /* font-family: 'Montserrat', sans-serif; */
     font-weight: 500;
     font-size: 14px;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    width: 100%;
 }
 img{
     width: 100%;
@@ -148,6 +156,8 @@ img{
     text-transform: uppercase;
     font-size: 12px;
     padding: 10px 30px;
+    min-width: 120px;
+    border-radius: 60px;
 }
 .btn-sm{
     padding: .25rem .5rem !important;
@@ -326,7 +336,13 @@ img{
 .sidebar .sidebar-content{
     padding: 15px;
 }
-.navbar{margin-left: 100px; background-color: #fff;padding: 15px 20px;}
+.navbar{
+    position: relative;
+}
+.navbar-button{
+    position: absolute;
+}
+.navbar{margin-left: 100px; background-color: #fff;padding: 15px 20px;background-color: var(--success-color);color: #fff;}
 
 @media (max-width: 992px){ 
     .navbar{margin-left: 0}
@@ -355,7 +371,8 @@ a:hover{
     text-decoration: none;
 }
 body{
-    background-color: #e2e2e2;
+    /* background-color: #e2e2e2; */
+    background-color: #fff;
 }
 
 /* .navbar{margin-bottom:15px;box-shadow:0 2px rgba(0,0,0,.2)}.navbar-brand{margin-left:auto;margin-right:auto} */
@@ -378,9 +395,24 @@ body >div{
     background-color: #fff;
     height: 100%;
 }
-.login{
-    padding-top: 10%;
+.bg-login img{
+    width: 150px;
 }
+.bg-login{
+    width: 100%;
+    height: 220px;
+    z-index: 0;
+    padding-top: 100px;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: bottom;
+    background-image: url('../img/bg-login.png');
+    text-align: center;
+}
+.card-login{
+    background-color: transparent;
+}
+
 .v-select-options img{
     width: 20px;
 }
